--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,104 @@
+version: 2.1
+
+orbs:
+  docker: circleci/docker@2.1.1
+  kubernetes: circleci/kubernetes@1.3.0
+
+jobs:
+  argocd-manual-sync:
+    docker:
+      - image: cimg/base:stable
+    parameters:
+      server:
+        description: |
+          Server IP of ArgoCD
+        type: string
+      username:
+        description: |
+          Username for ArgoCD
+        type: string
+      password:
+        description: |
+          Password for ArgoCD
+        type: string
+    steps:
+      - run:
+          name: Install ArgoCD CLI
+          command: |
+            URL=https://<< parameters.server >>/download/argocd-linux-amd64
+            [ -w /usr/local/bin ] && SUDO="" || SUDO=sudo
+            $SUDO curl --insecure -sSL -o /usr/local/bin/argocd $URL
+            $SUDO chmod +x /usr/local/bin/argocd
+      - run:
+          name: ArgoCD CLI login
+          command: argocd login << parameters.server >> --insecure --username << parameters.username >> --password << parameters.password >>
+      - run:
+          name: Manual sync
+          command: argocd app sync $APP_NAME
+      - run:
+          name: Wait for application to reach a synced and healthy state
+          command: argocd app wait $APP_NAME
+
+  argocd-configure:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - run:
+          name: Set Minikube Kubeconfig
+          command: |
+            minikube status || minikube start
+            kubectl config use-context minikube
+      - kubernetes/create-or-update-resource:
+          resource-file-path: argocd/config.yaml
+
+  bump-docker-tag-kustomize:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run:
+          name: Install kustomize
+          command: |
+            URL=https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize/v4.5.2/kustomize_v4.5.2_linux_amd64.tar.gz
+            curl -L $URL | tar zx
+            [ -w /usr/local/bin ] && SUDO="" || SUDO=sudo
+            $SUDO chmod +x ./kustomize
+            $SUDO mv ./kustomize /usr/local/bin
+      - checkout
+      - run:
+          name: Bump Docker Tag
+          command: |
+            cd manifests
+            kustomize edit set image $APP_NAME=$DOCKER_LOGIN/$APP_NAME:$CIRCLE_SHA1
+      - add_ssh_keys:
+          fingerprints:
+            - "$SSH_FINGERPRINT"
+      - run:
+          name: Commit & Push to GitHub
+          command: |
+            git config user.email "$GITHUB_EMAIL"
+            git config user.name "CircleCI User"
+            git checkout $CIRCLE_BRANCH           
+            git add manifests/kustomization.yaml
+            git commit -am "Bumps docker tag [skip ci]"
+            git push origin $CIRCLE_BRANCH
+
+workflows:
+  Deploy-App-on-Minikube:
+    jobs:
+      - docker/publish:
+          image: $DOCKER_LOGIN/$APP_NAME
+          tag: $CIRCLE_SHA1,latest
+      - bump-docker-tag-kustomize:
+          requires:
+            - docker/publish
+      - argocd-configure:
+          requires:
+            - bump-docker-tag-kustomize
+      - argocd-manual-sync:
+          server: $ARGOCD_SERVER
+          username: $ARGOCD_USERNAME
+          password: $ARGOCD_PASSWORD
+          requires:
+            - argocd-configure
 
