--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ orbs:
 jobs:
   argocd-manual-sync:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:14  # Updated to valid CircleCI image
+    resource_class: medium  # Removed invalid resource class and set to medium (default)
     parameters:
       server:
         description: |
@@ -41,7 +42,8 @@ jobs:
 
   argocd-configure:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:14  # Updated to valid CircleCI image
+    resource_class: medium  # Set resource class to medium
     steps:
       - checkout
       - run:
@@ -54,7 +56,8 @@ jobs:
 
   bump-docker-tag-kustomize:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:14  # Updated to valid CircleCI image
+    resource_class: medium  # Set resource class to medium
     steps:
       - run:
           name: Install kustomize
@@ -79,7 +82,7 @@ jobs:
             git config user.email "$GITHUB_EMAIL"
             git config user.name "CircleCI User"
             git checkout $CIRCLE_BRANCH           
-            git add manifests/kustomization.yaml
+            git add manifests/.
             git commit -am "Bumps docker tag [skip ci]"
             git push origin $CIRCLE_BRANCH
 
@@ -101,4 +104,3 @@ workflows:
           password: $ARGOCD_PASSWORD
           requires:
             - argocd-configure
-
