--- a/jenkins-menifests/deployment-svc.yaml
+++ b/jenkins-menifests/deployment-svc.yaml
@@ -32,6 +32,15 @@ spec:
           volumeMounts:
             - mountPath: /var/jenkins_home
               name: jenkins-data
+        - name: install-docker
+          image: docker:20.10.7-dind  # Using a Docker-in-Docker image
+          command:
+            - "sh"
+            - "-c"
+            - "cp /usr/local/bin/docker /var/jenkins_home/docker && chmod +x /var/jenkins_home/docker"
+          volumeMounts:
+            - mountPath: /var/jenkins_home
+              name: jenkins-data
       containers:
         - name: jenkins
           image: jenkins/jenkins:lts
