--- a/pod.yaml
+++ b/pod.yaml
@@ -20,7 +20,7 @@ spec:
         - name: TRIVY_CACHE_DIR
           value: "/root/.cache/trivy"
     - name: docker
-      image: docker:latest
+      image: docker:24.0.7  # Use a stable version
       command: ["sleep", "infinity"]
       volumeMounts:
         - name: docker-socket
