--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,21 +25,21 @@ pipeline {
             }
         }
 
-        stage('Trivy Scan') {
-            steps {
-                container('trivy') {
-                    sh "trivy image --exit-code 0 --severity HIGH,CRITICAL ${DOCKER_IMAGE}:latest"
-                }
-            }
+stage('Build Docker Image') {
+    steps {
+        container('docker') {
+            sh "docker build -t ${DOCKER_IMAGE}:${BUILD_NUMBER} ."
         }
+    }
+}
 
-        stage('Build Docker Image') {
-            steps {
-                container('docker') {
-                    sh "docker build -t ${DOCKER_IMAGE}:${BUILD_NUMBER} ."
-                }
-            }
+stage('Trivy Scan') {
+    steps {
+        container('trivy') {
+            sh "trivy image --exit-code 0 --severity HIGH,CRITICAL ${DOCKER_IMAGE}:${BUILD_NUMBER}"
         }
+    }
+}
 
         stage('Push Docker Image to Docker Hub') {
             steps {
