--- a/menifests/kustomization.yaml
+++ b/menifests/kustomization.yaml
@@ -9,4 +9,4 @@ namespace: nodejs
 images:
   - name: daudidrees/aks-k8s-rollouts
     newName: daudidrees/aks-k8s-rollouts
-    newTag: v1
+    newTag: "${BUILD_NUMBER}"
