--- a/menifests/kustomization.yaml
+++ b/menifests/kustomization.yaml
@@ -1,10 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - namespace.yaml
   - rollout.yaml
   - service-active.yaml
-  - service-preview.yaml
-  - namespace.yaml
+  - svc-preview.yaml
 namespace: nodejs
 images:
   - name: daudidrees/aks-k8s-rollouts
