--- a/menifests/kustomization.yaml
+++ b/menifests/kustomization.yaml
@@ -2,9 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - rollout.yaml
-  - service-active.yaml
-  - svc-preview.yaml
+  - app-deployment.yaml
+  - service.yaml
 namespace: nodejs
 images:
   - name: daudidrees/aks-k8s-rollouts
