--- a/pod.yaml
+++ b/pod.yaml
@@ -5,10 +5,10 @@ metadata:
 spec:
   containers:
     - name: jnlp
-      image: jenkins/inbound-agent:alpine-jdk17
+      image: jenkins/inbound-agent:latest
       volumeMounts:
         - name: shared-bin
-          mountPath: /usr/local/bin  # Shared path for kubectl
+          mountPath: /shared-bin  # Do not mount /usr/local/bin
 
     - name: trivy
       image: aquasec/trivy:latest
@@ -35,15 +35,13 @@ spec:
 
     - name: kubectl
       image: bitnami/kubectl:latest  # Official kubectl image
-      command: ["sleep", "infinity"]
+      command: ["/bin/sh", "-c", "cp /opt/bitnami/kubectl/bin/kubectl /shared-bin/kubectl && sleep infinity"]
       volumeMounts:
         - name: shared-bin
           mountPath: /shared-bin
 
   volumes:
     - name: trivy-cache
-      emptyDir: {}
-    - name: kubectl-bin
       emptyDir: {}
     - name: shared-bin
       emptyDir: {}  # Temporary shared volume for kubectl
