--- a/pod.yaml
+++ b/pod.yaml
@@ -5,11 +5,7 @@ metadata:
 spec:
   containers:
     - name: jnlp
-      image: jenkins/inbound-agent:latest
-      volumeMounts:
-        - name: kubectl-bin
-          mountPath: /usr/local/bin  # Mount kubectl to /usr/local/bin
-
+      image: jenkins/inbound-agent:alpine-jdk17
     - name: trivy
       image: aquasec/trivy:latest
       command: ["sleep", "infinity"]
@@ -20,23 +16,18 @@ spec:
           mountPath: /var/run/docker.sock
         - name: workspace
           mountPath: /workspace
-
+      env:
+        - name: TRIVY_CACHE_DIR
+          value: "/root/.cache/trivy"
     - name: docker
-      image: docker:24.0.7
+      image: docker:24.0.7  # Use a stable version
       command: ["sleep", "infinity"]
       volumeMounts:
         - name: docker-socket
           mountPath: /var/run/docker.sock
         - name: workspace
           mountPath: /workspace
-
-    - name: kubectl
-      image: bitnami/kubectl:latest
-      command: ["/bin/sh", "-c", "cp /opt/bitnami/kubectl/bin/kubectl /kubectl-bin/kubectl && chmod +x /kubectl-bin/kubectl && sleep infinity"]
-      volumeMounts:
-        - name: kubectl-bin
-          mountPath: /kubectl-bin  # Shared volume for moving kubectl to /usr/local/bin
-
+          
   volumes:
     - name: trivy-cache
       emptyDir: {}
@@ -46,5 +37,3 @@ spec:
         type: Socket
     - name: workspace
       emptyDir: {}
-    - name: kubectl-bin
-      emptyDir: {}  # Shared volume for kubectl
