--- a/jenkinsfile
+++ b/jenkinsfile
@@ -58,7 +58,7 @@ pipeline {
 
         stage('Apply Rollout') {
             steps {
-                sh "kubectl apply -k manifests/"
+                sh "kubectl apply -k menifests/"
                 sh "kubectl rollout status rollout/nodejs -n nodejs"
             }
         }
